--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -5,48 +5,15 @@ on:
   push:
     branches:
       - main
-      - 'releases/**'
 
 jobs:
-  compile:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: maven
-
-      - name: Compile Code
-        run: mvn -B compile
-
-  junit:
-    runs-on: ubuntu-latest
-    needs: compile
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: maven
-
-      - name: Run JUnit Tests
-        run: mvn -B test
-
   sonar_scan:
     runs-on: ubuntu-latest
-    needs: junit
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Important for SonarCloud to get all git history
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -54,13 +21,6 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
           cache: maven
-
-      - name: Cache SonarCloud packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
 
       - name: SonarCloud Scan
         run: |
